# Aferiy-PS240-Local-

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hassfest.yml  lint.yml
custom_components/aecc_battery/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  tcp_client.py  time.py
custom_components/aecc_battery/frontend/: aferiy-overnight-plan-card.js
custom_components/aecc_battery/translations/: de.json  en.json  fr.json  nl.json
docs/: cloud-app-findings.md  dashboard-card.md  entities.md  troubleshooting.md
tests/: conftest.py  test_battery_soc_entity_cleanup.py  test_diagnostics.py  test_energy_dashboard_solar.py  test_morning_solar_credit.py  test_overnight_soc_guard.py  test_ps240_register_safety.py  test_smart_history_configuration.py  test_smart_overnight_buffer.py  test_storage_soc_entity_hold.py  test_storage_soc_snapshot_guard.py  test_tariff_presets.py
