[project]
name = "aferiy-ps240-local"
version = "1.4.12"
description = "Home Assistant custom integration for local TCP monitoring and control of an AFERIY PS240 battery"
requires-python = ">=3.12"
dependencies = [
    "homeassistant>=2024.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E501",
]
